syntax = "proto3";

package dalalstreet.api.models;

message StockHistory {
  uint32 stock_id = 1;
  uint32 close = 2;
  string created_at = 3;
  uint32 interval = 4;
  uint32 open = 5;
  uint32 high = 6;
  uint32 low = 7;
  uint32 volume = 8;
}
